--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "lucide-react": "^0.344.0",
-    "recharts": "^2.12.1"
+    "recharts": "^2.12.1",
+	"tailwindcss-animate": "^1.0.7",
+    "next-themes": "^0.2.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
